--- a/examples/olon_basic/src/main/webapp/WEB-INF/web.xml
+++ b/examples/olon_basic/src/main/webapp/WEB-INF/web.xml
@@ -1,32 +1,25 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<web-app>
 
-<web-app version="3.0" xmlns="http://java.sun.com/xml/ns/javaee"
-    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-    xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
+  <filter>
+    <filter-name>LoggerContextFilter</filter-name>
+    <filter-class>ch.qos.logback.classic.selector.servlet.LoggerContextFilter</filter-class>
+  </filter>
+  <filter-mapping>
+    <filter-name>LoggerContextFilter</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
 
   <filter>
     <filter-name>LiftFilter</filter-name>
-    <display-name>Lift Filter</display-name>
-    <description>The Filter that intercepts lift calls</description>
-    <filter-class>net.liftweb.http.LiftFilter</filter-class>
-    <async-supported>true</async-supported>
+    <filter-class>olon.http.LiftFilter</filter-class>
   </filter>
-
-
   <filter-mapping>
     <filter-name>LiftFilter</filter-name>
     <url-pattern>/*</url-pattern>
   </filter-mapping>
 
-  <session-config>
-    <session-timeout>20</session-timeout>
-    <cookie-config>
-      <http-only>true</http-only>
-    </cookie-config>
-  </session-config>
+  <listener>
+    <listener-class>ch.qos.logback.classic.selector.servlet.ContextDetachingSCL</listener-class>
+  </listener>
 
-  <context-param>
-    <param-name>org.eclipse.jetty.servlet.SessionIdPathParameterName</param-name>
-    <param-value>none</param-value>
-  </context-param>
 </web-app>
